--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             app:menu="@menu/bottom_nav_menu"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-	android:id="@+id/swipeRefresh"
+	android:id="@+id/swipe_refresh"
 	android:layout_width="0dp"
 	android:layout_height="0dp"
 	app:layout_constraintTop_toTopOf="parent"
